syntax= "proto3";
option java_multiple_files=true;
option java_package = "fr.unice.scale.latencyaware.producer";


service ArrivalService{
  rpc arrivalRate (ArrivalRequest) returns (ArrivalResponse) {};
  // rpc consumptionRatee (RateRequest) returns (RateResponse) {};
}

message ArrivalResponse {
  float arrival = 1;
}

message ArrivalRequest {
  string arrivalrequest = 1;
}

// message RateResponse {
//   float rate =1;
// }

// message RateRequest {
//   string raterequest = 1;
// }





